--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificar CPF</title>
-    <script src="src/server.js" defer></script>
+    <script src="src/index.js" defer></script>
     <link rel="stylesheet" href="src/syle.css">
 </head>
 <body>
